--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Clarence
-            <span class="text-primary">Taylor</span>
+            <span class="text-primary">BUMSUK</span>
           </h1>
           <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
             <a href="mailto:name@email.com">name@email.com</a>
