--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h1 class="mb-0">JANG
             <span class="text-primary">BUMSUK</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+          <div class="subheading mb-5">89-0, Songpa-gu Seoul,Olympic@ Republic of Korea · (010)4143-4160 ·
             <a href="mailto:name@email.com">name@email.com</a>
           </div>
           <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
